types/vehicle/VehicleType: Fix Java9+ deprecation for new Float.